--- a/UTAU/Lite/oto_LiteVC.ini
+++ b/UTAU/Lite/oto_LiteVC.ini
@@ -332,7 +332,7 @@ _ci_tie_wu_ei_ao_ci_yu_ou.wav=u eiVV,3,3,3,3,3
 _ci_tie_wu_ei_ao_ci_yu_ou.wav=ei A0VV,4,4,4,4,4
 _ci_tie_wu_ei_ao_ci_yu_ou.wav=i0 vVC,6,6,6,6,6
 _ci_tie_wu_ei_ao_ci_yu_ou.wav=v @VV,7,7,7,7,7
-_shi_fo_yi_ei_chi_a_.wav=ir fVC,1,1,1,1,1
-_shi_fo_yi_ei_chi_a_.wav=o yVC,2,2,2,2,2
-_shi_fo_yi_ei_chi_a_.wav=i eiVV,3,3,3,3,3
-_shi_fo_yi_ei_chi_a_.wav=ir aVV,5,5,5,5,5
+_shi_fo_yi_ei_chi_a.wav=ir fVC,1,1,1,1,1
+_shi_fo_yi_ei_chi_a.wav=o yVC,2,2,2,2,2
+_shi_fo_yi_ei_chi_a.wav=i eiVV,3,3,3,3,3
+_shi_fo_yi_ei_chi_a.wav=ir aVV,5,5,5,5,5
