--- a/UTAU/Lite/presamp.ini
+++ b/UTAU/Lite/presamp.ini
@@ -16,6 +16,12 @@ ou=ou=ou,ao,bao,biao,cao,chao,chou,cou,dao,diao,diu,dou,fou,gao,gou,hao,hou,jiao
 u=u=wu,bu,chu,cu,du,fu,gu,hu,ku,lu,mu,nu,pu,ru,shu,su,tu,zhu,zu=100
 v=v=yu,ju,lv,nv,qu,xu=100
 [CONSONANT]
+a=a,ai,an=0
+A0=ao,ang=0
+e=e=0
+ei=ei=0
+er=er=0
+@=en,eng,ou=0
 c=ca,cai,can,cang,cao,ce,cei,cen,ceng,ci,cong,cou,cu,cuan,cui,cun,cuo,za,zai,zan,zang,zao,ze,zei,zen,zeng,zi,zong,zou,zu,zuan,zui,zun,zuo=1
 ch=cha,chai,chan,chang,chao,che,chen,cheng,chi,chong,chou,chu,chua,chuai,chuan,chuang,chui,chun,chuo,zha,zhai,zhan,zhang,zhao,zhe,zhei,zhen,zheng,zhi,zhong,zhou,zhu,zhua,zhuai,zhuan,zhuang,zhui,zhun,zhuo=1
 f=fa,fan,fang,fei,fen,feng,fo,fou,fu=0
@@ -36,7 +42,7 @@ x=xi,xia,xian,xiang,xiao,xie,xin,xing,xiong,xiu,xu,xuan,xue,xun=0
 y=ya,yan,yang,yao,ye,yi,yin,ying,yong,you=0
 R=R=0
 [PRIORITY]
-k,g,t,d,b,p
+c,ch,f,h,k,l,m,n,p,q,r,s,sh,t,x,y,w
 [REPLACE]
 ai=a
 an=a
@@ -296,12 +302,12 @@ xiang=xiao
 xin=xi
 xing=xi
 xio=xiao
-xu=xun
+xun=xu
 xua=xuan
 xuai=xuan
-xv=xun
+xv=xu
 xve=xue
-xyu=xun
+xyu=xu
 yai=ya
 yang=yao
 yin=yi
