--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,20 @@ url: https://just-the-docs.github.io
 
 aux_links:
   Back to my works: https://slidingwall.github.io/works
+
+callouts:
+  warning:
+    title: Warning / 注意
+    color: red
+  highlight:
+    title: 
+    color: yellow
+  new:
+    title: New / 新功能
+    color: green
+  note:
+    title: Note / 注记
+    color: purple
+  important:
+    title: Important / 重要
+    color: blue
