--- a/UTAU/Lite/presamp.ini
+++ b/UTAU/Lite/presamp.ini
@@ -44,7 +44,296 @@ R=R=0
 [PRIORITY]
 c,ch,f,h,k,l,m,n,p,q,r,s,sh,t,x,y,w
 [REPLACE]
-a=a
+ai=a
+an=a
+ang=ao
+bai=ba
+ban=ba
+bao=bang
+ben=beng
+bian=bie
+biang=biao
+bin=bi
+bing=bi
+bio=biao
+bou=beng
+bua=buan
+buai=buan
+buo=bo
+cai=ca
+can=ca
+cang=cao
+cei=ce
+cen=ceng
+chai=cha
+chan=cha
+chang=chao
+chen=cheng
+cho=chuo
+chou=cheng
+chua=chuan
+chuai=chuan
+co=cuo
+cou=ceng
+cua=cuan
+cuai=cuan
+dai=da
+dan=da
+dao=dang
+den=deng
+diai=dia
+dian=die
+diang=diao
+din=di
+ding=di
+dio=diao
+do=duo
+dou=deng
+dua=duan
+duai=duan
+en=eng
+fai=fa
+fan=fa
+fao=fang
+fen=feng
+fiang=fiao
+fin=fi
+fing=fi
+fio=fiao
+fong=feng
+fou=feng
+fua=fuan
+fuai=fuan
+fuo=fo
+gai=ga
+gan=ga
+gang=gao
+gen=geng
+giang=giao
+gin=gi
+ging=gi
+gio=giao
+go=guo
+gou=geng
+gua=guan
+guai=guan
+hai=ha
+han=ha
+hang=hao
+hen=heng
+hiang=hiao
+hin=hi
+hing=hi
+hio=hiao
+ho=huo
+hou=heng
+hua=huan
+huai=huan
+i=yi
+ia=ya
+iai=ya
+ian=ye
+iang=yao
+iao=yao
+ie=ye
+in=yi
+ing=yi
+io=yao
+iong=yong
+iou=you
+iu=you
+jiai=jia
+jiang=jiao
+jin=ji
+jing=ji
+jio=jiao
+jua=jue
+juai=jue
+juan=jue
+jun=ju
+jv=ju
+jve=jue
+jyu=ju
+kai=ka
+kan=ka
+kang=kao
+ken=keng
+kiang=kiao
+kin=ki
+king=ki
+kio=kiao
+ko=kuo
+kou=keng
+kua=kuan
+kuai=kuan
+lai=la
+lan=la
+lao=lang
+len=leng
+liai=lia
+lian=lie
+liang=liao
+lin=li
+ling=li
+lio=liao
+lo=luo
+lou=leng
+lua=luan
+luai=luan
+lve=lue
+lyu=lv
+mai=ma
+man=ma
+mao=mang
+men=meng
+mian=mie
+miang=miao
+min=mi
+ming=mi
+mio=miao
+mong=meng
+mou=meng
+mua=muan
+muai=muan
+muo=mo
+nai=na
+nan=na
+nao=nang
+nen=neng
+nian=nie
+niang=niao
+nin=ni
+ning=ni
+nio=niao
+no=nuo
+nou=neng
+nua=nuan
+nuai=nuan
+nve=nue
+nyu=nv
+o=wo
+ou=eng
+pai=pa
+pan=pa
+pao=pang
+pen=peng
+pian=pie
+piang=piao
+pin=pi
+ping=pi
+pio=piao
+pou=peng
+pua=puan
+puai=puan
+puo=po
+qiai=qia
+qiang=qiao
+qin=qi
+qing=qi
+qio=qiao
+qua=que
+quai=que
+quan=que
+qun=qu
+qv=qu
+qve=que
+qyu=qu
+ra=ran
+rai=ran
+rang=rao
+ren=reng
+ro=ruo
+rou=reng
+RR=R
+rua=ruan
+ruai=ruan
+sai=sa
+san=sa
+sang=sao
+sei=se
+sen=seng
+shai=sha
+shan=sha
+shang=shao
+shen=sheng
+sho=shuo
+shou=sheng
+shua=shuan
+shuai=shuan
+so=suo
+sou=seng
+sua=suan
+suai=suan
+tai=ta
+tan=ta
+tao=tang
+ten=teng
+tian=tie
+tiang=tiao
+tin=ti
+ting=ti
+tio=tiao
+to=tuo
+tou=teng
+tua=tuan
+tuai=tuan
+u=wu
+ua=wan
+uai=wan
+uan=wan
+uang=wang
+ue=yue
+uei=wei
+uen=wen
+ui=wei
+un=wen
+uo=wo
+v=yu
+van=yue
+ve=yue
+vn=yu
+wa=wan
+wai=wan
+weng=wen
+wong=wen
+wui=wei
+xiai=xia
+xiang=xiao
+xin=xi
+xing=xi
+xio=xiao
+xua=xue
+xuai=xue
+xuan=xue
+xun=xu
+xv=xu
+xve=xue
+xyu=xu
+yai=ya
+yan=ye
+yang=yao
+yin=yi
+ying=yi
+yo=yao
+yuan=yue
+yun=yu
+yve=yue
+zai=za
+zan=za
+zang=zao
+zen=zeng
+zhai=zha
+zhan=zha
+zhang=zhao
+zhen=zheng
+zho=zhuo
+zhou=zheng
+zhua=zhuan
+zhuai=zhuan
+zo=zuo
+zou=zeng
+zua=zuan
+zuai=zuan
 [MUSTVC]
 1
 [ENDTYPE]
