--- a/UTAU/Lite/presamp.ini
+++ b/UTAU/Lite/presamp.ini
@@ -4,15 +4,15 @@
 a=a=a,ba,ca,cha,chua,da,dia,fa,ga,gua,ha,hua,jia,ka,kua,la,lia,ma,na,nia,pa,qia,rua,sa,sha,shua,ta,wa,xia,ya,za,zha,zhua=100
 e=e=e,ce,che,de,ge,he,ke,le,me,ne,re,se,she,te,ze,zhe=100
 e0=e0=ye,bie,die,jie,jue,lie,lue,mie,nie,nue,pie,qie,que,tie,xie,xue,yue=100
-ei=ei=ei,ai,bai,bei,cai,cei,chai,chuai,chui,cui,dai,dei,dui,fei,gai,gei,guai,gui,hai,hei,huai,hui,kai,kei,kuai,kui,lai,lei,mai,mei,nai,nei,pai,pei,rui,sai,sei,shai,shei,shuai,shui,sui,tai,tei,tui,wai,wei,yai,zai,zei,zhai,zhei,zhuai,zhui,zui=100
-en=en=en,an,ban,ben,bian,bin,can,cen,chan,chen,chuan,chun,cuan,cun,dan,den,dian,din,duan,dun,fan,fen,gan,gen,guan,gun,han,hen,huan,hun,jian,jin,juan,jun,kan,ken,kuan,kun,lan,lian,lin,luan,lun,man,men,mian,min,nan,nen,nian,nin,nuan,nun,pan,pen,pian,pin,qian,qin,quan,qun,ran,ren,ruan,run,san,sen,shan,shen,shuan,shun,suan,sun,tan,tian,tuan,tun,wan,wen,xian,xin,xuan,xun,yan,yin,yuan,yun,zan,zen,zhan,zhen,zhuan,zhun,zuan,zun=100
-eng=eng=eng,ang,bang,beng,biang,bing,cang,ceng,chang,cheng,chong,chuang,cong,dang,deng,diang,ding,dong,fang,feng,gang,geng,gong,guang,hang,heng,hong,huang,jiang,jing,jiong,kang,keng,kong,kuang,lang,leng,liang,ling,long,mang,meng,ming,nang,neng,niang,ning,nong,pang,peng,ping,qiang,qing,qiong,rang,reng,rong,sang,seng,shang,sheng,shuang,song,tang,teng,ting,tong,wang,weng,xiang,xing,xiong,yang,ying,yong,zang,zeng,zhang,zheng,zhong,zhuang,zong=100
+:i=ei=ei,ai,bai,bei,cai,cei,chai,chuai,chui,cui,dai,dei,dui,fei,gai,gei,guai,gui,hai,hei,huai,hui,kai,kei,kuai,kui,lai,lei,mai,mei,nai,nei,pai,pei,rui,sai,sei,shai,shei,shuai,shui,sui,tai,tei,tui,wai,wei,yai,zai,zei,zhai,zhei,zhuai,zhui,zui=100
+n=en=en,an,ban,ben,bian,bin,can,cen,chan,chen,chuan,chun,cuan,cun,dan,den,dian,din,duan,dun,fan,fen,gan,gen,guan,gun,han,hen,huan,hun,jian,jin,juan,jun,kan,ken,kuan,kun,lan,lian,lin,luan,lun,man,men,mian,min,nan,nen,nian,nin,nuan,nun,pan,pen,pian,pin,qian,qin,quan,qun,ran,ren,ruan,run,san,sen,shan,shen,shuan,shun,suan,sun,tan,tian,tuan,tun,wan,wen,xian,xin,xuan,xun,yan,yin,yuan,yun,zan,zen,zhan,zhen,zhuan,zhun,zuan,zun=100
+ng=eng=eng,ang,bang,beng,biang,bing,cang,ceng,chang,cheng,chong,chuang,cong,dang,deng,diang,ding,dong,fang,feng,gang,geng,gong,guang,hang,heng,hong,huang,jiang,jing,jiong,kang,keng,kong,kuang,lang,leng,liang,ling,long,mang,meng,ming,nang,neng,niang,ning,nong,pang,peng,ping,qiang,qing,qiong,rang,reng,rong,sang,seng,shang,sheng,shuang,song,tang,teng,ting,tong,wang,weng,xiang,xing,xiong,yang,ying,yong,zang,zeng,zhang,zheng,zhong,zhuang,zong=100
 er=er=er=100
 i=i=yi,bi,di,ji,li,mi,ni,pi,qi,ti,xi=100
 i0=i0=ci,si,zi=100
 ir=ir=chi,ri,shi,zhi=100
 o=o=wo,bo,chuo,cuo,duo,fo,guo,huo,kuo,luo,mo,nuo,po,ruo,shuo,suo,tuo,zhuo,zuo=100
-ou=ou=ou,ao,bao,biao,cao,chao,chou,cou,dao,diao,diu,dou,fou,gao,gou,hao,hou,jiao,jiu,kao,kou,lao,liao,liu,lo,lou,mao,miao,miu,mou,nao,niao,niu,pao,piao,pou,qiao,qiu,rao,rou,sao,shao,shou,sou,tao,tiao,tou,xiao,xiu,yao,you,zao,zhao,zhou,zou=100
+:u=ou=ou,ao,bao,biao,cao,chao,chou,cou,dao,diao,diu,dou,fou,gao,gou,hao,hou,jiao,jiu,kao,kou,lao,liao,liu,lo,lou,mao,miao,miu,mou,nao,niao,niu,pao,piao,pou,qiao,qiu,rao,rou,sao,shao,shou,sou,tao,tiao,tou,xiao,xiu,yao,you,zao,zhao,zhou,zou=100
 u=u=wu,bu,chu,cu,du,fu,gu,hu,ku,lu,mu,nu,pu,ru,shu,su,tu,zhu,zu=100
 v=v=yu,ju,lv,nv,qu,xu=100
 [CONSONANT]
