--- a/UTAU/Nano/oto_NanoVC.ini
+++ b/UTAU/Nano/oto_NanoVC.ini
@@ -305,3 +305,10 @@ _er_qu_ci_fo_xi_er_tie_ao.wav=o x#,3200,400,-600,300,100
 _er_qu_ci_fo_xi_er_tie_ao.wav=er t#,4200,300,-350,250,100
 _er_qu_ci_fo_xi_er_tie_ao.wav=e0 A0#,4700,400,-600,300,100
 _chi_qi_chi_ao_chi_a_er_yi.wav=ir q#,1700,300,-350,250,100
+_chi_qi_chi_ao_chi_a_er_yi.wav=ir A0#,2700,400,-600,300,100
+_chi_qi_chi_ao_chi_a_er_yi.wav=ir a#,3700,400,-600,300,100
+_chi_qi_chi_ao_chi_a_er_yi.wav=er y#,4700,300,-350,250,100
+_er_ei_er_ao_ci_ei_ci_ao.wav=er ei#,1700,400,-600,300,100
+_er_ei_er_ao_ci_ei_ci_ao.wav=er A0#,2700,400,-600,300,100
+_er_ei_er_ao_ci_ei_ci_ao.wav=i0 ei#,3700,400,-600,300,1005
+_er_ei_er_ao_ci_ei_ci_ao.wav=i0 A0#,4700,400,-600,300,100
