--- a/UTAU/VCV_Nano/presamp.ini
+++ b/UTAU/VCV_Nano/presamp.ini
@@ -12,8 +12,7 @@ i=i=yi,bi,di,ji,li,mi,ni,pi,qi,ti,xi=100
 i0=i0=ci,si,zi=100
 ir=ir=chi,ri,shi,zhi=100
 o=o=wo,bo,chuo,cuo,duo,fo,guo,huo,kuo,luo,mo,nuo,po,ruo,shuo,suo,tuo,zhuo,zuo=100
-:u=ou=ou,ao,bao,biao,cao,chao,chou,cou,dao,diao,diu,dou,fou,gao,gou,hao,hou,jiao,jiu,kao,kou,lao,liao,liu,lo,lou,mao,miao,miu,mou,nao,niao,niu,pao,piao,pou,qiao,qiu,rao,rou,sao,shao,shou,sou,tao,tiao,tou,xiao,xiu,yao,you,zao,zhao,zhou,zou=100
-u=u=wu,bu,chu,cu,du,fu,gu,hu,ku,lu,mu,nu,pu,ru,shu,su,tu,zhu,zu=100
+u=u=wu,ao,bao,biao,bu,cao,chao,chou,chu,cou,cu,dao,diao,diu,dou,du,fou,fu,gao,gou,gu,hao,hou,hu,jiao,jiu,kao,kou,ku,lao,liao,liu,lo,lou,lu,mao,miao,miu,mou,mu,nao,niao,niu,nu,ou,pao,piao,pou,pu,qiao,qiu,rao,rou,ru,sao,shao,shou,shu,sou,su,tao,tiao,tou,tu,xiao,xiu,yao,you,zao,zhao,zhou,zhu,zou,zu=100
 v=v=yu,ju,lv,nv,qu,xu=100
 [CONSONANT]
 a=a,ai,an=0
